--- a/app/globals.css
+++ b/app/globals.css
@@ -85,4 +85,20 @@ body,
     font-size: 16px !important;
 }
 
+.perspective-1000 {
+    perspective: 1000px;
+  }
+  
+  .transform-style-preserve-3d {
+    transform-style: preserve-3d;
+  }
+  
+  .backface-hidden {
+    backface-visibility: hidden;
+  }
+  
+  .rotate-y-180 {
+    transform: rotateY(180deg);
+  }
+
 @import "~@uploadthing/react/styles.css";
